--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.3",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
